-- Almost all changes listed herein are new as of 2016. --

2016-07-21  Bob Weiner  <rsw@gnu.org>

* hib-social.el (social-reference): 
  hibtypes.el (mail-address-at-p): Let case-fold-search be t since mail-addresses
    are case-insensitive.

* Various Files: Small copyright fixes and formatting adjustments.
    Replaced hyperb:xemacs-p with (featurep 'xemacs) for byte-compiler
    optimization purposes and made small fixes throughout suggested by Stefan
    Monnier.

* hibtypes.el (mail-address-regexp): Simplified and modernized address matching
    to better distinguish from @username social media references.
              (mail-address-mode-list): Added lisp-interaction-mode and fundamental-mode.
              (mail-address-tld-regexp): Added to match most common top-level
    domains to tell if a match is really an email address or not.
              (mail-address-at-p): Tightened by using mail-address-tld-regexp.
  DEMO (Email Addresses, Social Media Hashtags and Usernames): Added descriptions.

2016-07-20  Bob Weiner  <rsw@gnu.org>

* MANIFEST: 
  Makefile:
  hibtypes.el (hib-social): 
  man/hyperbole.texi (Implicit Buttons): Added social-reference.
  hib-social.el: Added this file to follow social media hashtag and username
    references.

* Makefile (help): Added as the default target, explaining major targets.

* HY-ABOUT:
  man/hyperbole.texi (Hyperbole Overview): Renamed 'Textual Information Management'
    to 'Contact and Text Finder'.  Renamed 'Button Types' to 'Buttons and Smart Keys'
    and made it the first item.  Added a paragraph on the Smart Keys.

* .gitignore: Added Texinfo formatting indices.

* hyperbole.el:
  Makefile:
  man/hyperbole.texi (Top):
  hversion.el (hyperb:version): Normalized version number to GNU 3-part standard.

2016-07-19  Mats Lidell  <matsl@gnu.org>

* .gitignore: Added git ignore file.

2016-07-19  Bob Weiner  <rsw@gnu.org>

* hyperbole-pkg.el (hyperbole): Version update in preparation for next release