@@ -21,9 +21,10 @@
 
   VARIABLES
 
-    - hsite.el is now included in the Hyperbole package rather than
-      generated.  Use the Hyperbole customization variables to change
-      anything in there rather than editing the file manually as before.
+    - hsettings.el is now included in the Hyperbole package rather than
+      generated (formerly called hsite.el).  Use the Hyperbole customization
+      variables to change anything in there rather than editing the file
+      manually as before.
 
 ===========================================================================
 *				    V6.00
